Feat Configurando END.P UserDTLS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ logging.level.org.springframework.security=DEBUG
 
 
 api.security.token.secret=${JWT_SECRET:my-secret-key}
+riot.api.key=RGAPI-c0336da1-b39f-4d72-8bbc-b465baaef51e
